- patches.fixes/btrfs-metadata-reservation-for-orphan-inodes:   Btrfs: Metadata reservation for orphan inodes.

--- a/series.conf
+++ b/series.conf
@@ -365,6 +365,7 @@
 	patches.fixes/btrfs-integrate-metadata-reservation-with-start_transaction
 	patches.fixes/btrfs-update-metadata-reservation-for-delayed-allocation
 	patches.fixes/btrfs-introduce-global-metadata-reservation
+	patches.fixes/btrfs-metadata-reservation-for-orphan-inodes
 
 	########################################################
 	# Reiserfs Patches
