- patches.fixes/btrfs-introduce-global-metadata-reservation:   Btrfs: Introduce global metadata reservation.

--- a/series.conf
+++ b/series.conf
@@ -364,6 +364,7 @@
 	patches.fixes/btrfs-introduce-contexts-for-metadata-reservation
 	patches.fixes/btrfs-integrate-metadata-reservation-with-start_transaction
 	patches.fixes/btrfs-update-metadata-reservation-for-delayed-allocation
+	patches.fixes/btrfs-introduce-global-metadata-reservation
 
 	########################################################
 	# Reiserfs Patches
