--- a/series.conf
+++ b/series.conf
@@ -367,6 +367,7 @@
 	patches.fixes/btrfs-introduce-global-metadata-reservation
 	patches.fixes/btrfs-metadata-reservation-for-orphan-inodes
 	patches.fixes/btrfs-metadata-enospc-handling-for-tree-log
+	patches.fixes/btrfs-pre-allocate-space-for-data-relocation
 
 	########################################################
 	# Reiserfs Patches
