- patches.fixes/btrfs-metadata-enospc-handling-for-tree-log:   Btrfs: Metadata ENOSPC handling for tree log.

--- a/series.conf
+++ b/series.conf
@@ -366,6 +366,7 @@
 	patches.fixes/btrfs-update-metadata-reservation-for-delayed-allocation
 	patches.fixes/btrfs-introduce-global-metadata-reservation
 	patches.fixes/btrfs-metadata-reservation-for-orphan-inodes
+	patches.fixes/btrfs-metadata-enospc-handling-for-tree-log
 
 	########################################################
 	# Reiserfs Patches
