- patches.fixes/btrfs-metadata-enospc-handling-for-balance:   Btrfs: Metadata ENOSPC handling for balance.

--- a/series.conf
+++ b/series.conf
@@ -368,6 +368,7 @@
 	patches.fixes/btrfs-metadata-reservation-for-orphan-inodes
 	patches.fixes/btrfs-metadata-enospc-handling-for-tree-log
 	patches.fixes/btrfs-pre-allocate-space-for-data-relocation
+	patches.fixes/btrfs-metadata-enospc-handling-for-balance
 
 	########################################################
 	# Reiserfs Patches
