- patches.fixes/direct-io-add-a-hook-for-the-fs-to-provide-its-own-submit_bio-function:   direct-io: add a hook for the fs to provide its own submit_bio   function.

--- a/series.conf
+++ b/series.conf
@@ -369,6 +369,7 @@
 	patches.fixes/btrfs-metadata-enospc-handling-for-tree-log
 	patches.fixes/btrfs-pre-allocate-space-for-data-relocation
 	patches.fixes/btrfs-metadata-enospc-handling-for-balance
+	patches.fixes/direct-io-add-a-hook-for-the-fs-to-provide-its-own-submit_bio-function
 
 	########################################################
 	# Reiserfs Patches
