--- a/series.conf
+++ b/series.conf
@@ -370,6 +370,7 @@
 	patches.fixes/btrfs-pre-allocate-space-for-data-relocation
 	patches.fixes/btrfs-metadata-enospc-handling-for-balance
 	patches.fixes/direct-io-add-a-hook-for-the-fs-to-provide-its-own-submit_bio-function
+	patches.fixes/btrfs-add-basic-dio-read-write-support
 
 	########################################################
 	# Reiserfs Patches
