--- a/series.conf
+++ b/series.conf
@@ -371,6 +371,7 @@
 	patches.fixes/btrfs-metadata-enospc-handling-for-balance
 	patches.fixes/direct-io-add-a-hook-for-the-fs-to-provide-its-own-submit_bio-function
 	patches.fixes/btrfs-add-basic-dio-read-write-support
+	patches.fixes/btrfs-do-aio_write-instead-of-write
 
 	########################################################
 	# Reiserfs Patches
