--- a/series.conf
+++ b/series.conf
@@ -372,6 +372,7 @@
 	patches.fixes/direct-io-add-a-hook-for-the-fs-to-provide-its-own-submit_bio-function
 	patches.fixes/btrfs-add-basic-dio-read-write-support
 	patches.fixes/btrfs-do-aio_write-instead-of-write
+	patches.fixes/btrfs-don-t-walk-around-with-task-state-task_running
 
 	########################################################
 	# Reiserfs Patches
