- patches.fixes/btrfs-use-async-helpers-for-dio-write-checksumming:   Btrfs: use async helpers for DIO write checksumming.

--- a/series.conf
+++ b/series.conf
@@ -373,6 +373,7 @@
 	patches.fixes/btrfs-add-basic-dio-read-write-support
 	patches.fixes/btrfs-do-aio_write-instead-of-write
 	patches.fixes/btrfs-don-t-walk-around-with-task-state-task_running
+	patches.fixes/btrfs-use-async-helpers-for-dio-write-checksumming
 
 	########################################################
 	# Reiserfs Patches
