- patches.fixes/btrfs-move-o_direct-space-reservation-to-btrfs_direct_io:   Btrfs: move O_DIRECT space reservation to btrfs_direct_IO.

--- a/series.conf
+++ b/series.conf
@@ -375,6 +375,7 @@
 	patches.fixes/btrfs-don-t-walk-around-with-task-state-task_running
 	patches.fixes/btrfs-use-async-helpers-for-dio-write-checksumming
 	patches.fixes/btrfs-rework-o_direct-enospc-handling
+	patches.fixes/btrfs-move-o_direct-space-reservation-to-btrfs_direct_io
 
 	########################################################
 	# Reiserfs Patches
