- patches.fixes/btrfs-avoid-enospc-errors-in-btrfs_dirty_inode:   Btrfs: avoid ENOSPC errors in btrfs_dirty_inode.

--- a/series.conf
+++ b/series.conf
@@ -376,6 +376,7 @@
 	patches.fixes/btrfs-use-async-helpers-for-dio-write-checksumming
 	patches.fixes/btrfs-rework-o_direct-enospc-handling
 	patches.fixes/btrfs-move-o_direct-space-reservation-to-btrfs_direct_io
+	patches.fixes/btrfs-avoid-enospc-errors-in-btrfs_dirty_inode
 
 	########################################################
 	# Reiserfs Patches
