--- a/series.conf
+++ b/series.conf
@@ -377,6 +377,7 @@
 	patches.fixes/btrfs-rework-o_direct-enospc-handling
 	patches.fixes/btrfs-move-o_direct-space-reservation-to-btrfs_direct_io
 	patches.fixes/btrfs-avoid-enospc-errors-in-btrfs_dirty_inode
+	patches.fixes/btrfs-fix-preallocation-and-nodatacow-checks-in-o_direct
 
 	########################################################
 	# Reiserfs Patches
