--- a/series.conf
+++ b/series.conf
@@ -379,6 +379,7 @@
 	patches.fixes/btrfs-avoid-enospc-errors-in-btrfs_dirty_inode
 	patches.fixes/btrfs-fix-preallocation-and-nodatacow-checks-in-o_direct
 	patches.fixes/btrfs-fix-block-generation-verification-race
+	patches.fixes/btrfs-drop-verbose-enospc-printk
 
 	########################################################
 	# Reiserfs Patches
