- patches.fixes/btrfs-allow-unaligned-dio: Btrfs: allow unaligned   DIO.

--- a/series.conf
+++ b/series.conf
@@ -380,6 +380,7 @@
 	patches.fixes/btrfs-fix-preallocation-and-nodatacow-checks-in-o_direct
 	patches.fixes/btrfs-fix-block-generation-verification-race
 	patches.fixes/btrfs-drop-verbose-enospc-printk
+	patches.fixes/btrfs-allow-unaligned-dio
 
 	########################################################
 	# Reiserfs Patches
