--- a/series.conf
+++ b/series.conf
@@ -382,6 +382,7 @@
 	patches.fixes/btrfs-drop-verbose-enospc-printk
 	patches.fixes/btrfs-allow-unaligned-dio
 	patches.fixes/btrfs-add-more-error-checking-to-btrfs_dirty_inode
+	patches.fixes/btrfs-fix-loop-device-on-top-of-btrfs
 
 	########################################################
 	# Reiserfs Patches
