- patches.fixes/btrfs-add-more-error-checking-to-btrfs_dirty_inode:   Btrfs: add more error checking to btrfs_dirty_inode.

--- a/series.conf
+++ b/series.conf
@@ -381,6 +381,7 @@
 	patches.fixes/btrfs-fix-block-generation-verification-race
 	patches.fixes/btrfs-drop-verbose-enospc-printk
 	patches.fixes/btrfs-allow-unaligned-dio
+	patches.fixes/btrfs-add-more-error-checking-to-btrfs_dirty_inode
 
 	########################################################
 	# Reiserfs Patches
