- patches.fixes/btrfs-uninitialized-data-is-check_path_shared:   Btrfs: uninitialized data is check_path_shared().

--- a/series.conf
+++ b/series.conf
@@ -384,6 +384,7 @@
 	patches.fixes/btrfs-add-more-error-checking-to-btrfs_dirty_inode
 	patches.fixes/btrfs-fix-loop-device-on-top-of-btrfs
 	patches.fixes/btrfs-fix-fallocate-regression
+	patches.fixes/btrfs-uninitialized-data-is-check_path_shared
 
 	########################################################
 	# Reiserfs Patches
