- patches.fixes/btrfs-fix-fallocate-regression: Btrfs: fix   fallocate regression.

--- a/series.conf
+++ b/series.conf
@@ -383,6 +383,7 @@
 	patches.fixes/btrfs-allow-unaligned-dio
 	patches.fixes/btrfs-add-more-error-checking-to-btrfs_dirty_inode
 	patches.fixes/btrfs-fix-loop-device-on-top-of-btrfs
+	patches.fixes/btrfs-fix-fallocate-regression
 
 	########################################################
 	# Reiserfs Patches
