- patches.fixes/btrfs-fix-null-dereference-in-relocation-c:   Btrfs: Fix null dereference in relocation.c.

--- a/series.conf
+++ b/series.conf
@@ -386,6 +386,7 @@
 	patches.fixes/btrfs-fix-fallocate-regression
 	patches.fixes/btrfs-uninitialized-data-is-check_path_shared
 	patches.fixes/btrfs-fix-remap_file_pages-error
+	patches.fixes/btrfs-fix-null-dereference-in-relocation-c
 
 	########################################################
 	# Reiserfs Patches
