- patches.fixes/btrfs-fix-remap_file_pages-error: Btrfs: fix   remap_file_pages error.

--- a/series.conf
+++ b/series.conf
@@ -385,6 +385,7 @@
 	patches.fixes/btrfs-fix-loop-device-on-top-of-btrfs
 	patches.fixes/btrfs-fix-fallocate-regression
 	patches.fixes/btrfs-uninitialized-data-is-check_path_shared
+	patches.fixes/btrfs-fix-remap_file_pages-error
 
 	########################################################
 	# Reiserfs Patches
