- patches.fixes/btrfs-handle-error-returns-from-btrfs_lookup_dir_item:   Btrfs: handle error returns from btrfs_lookup_dir_item().

--- a/series.conf
+++ b/series.conf
@@ -388,6 +388,7 @@
 	patches.fixes/btrfs-fix-remap_file_pages-error
 	patches.fixes/btrfs-fix-null-dereference-in-relocation-c
 	patches.fixes/btrfs-fix-bug_on-for-fs-converted-from-extn
+	patches.fixes/btrfs-handle-error-returns-from-btrfs_lookup_dir_item
 
 	########################################################
 	# Reiserfs Patches
