- patches.fixes/btrfs-fix-bug_on-for-fs-converted-from-extn:   Btrfs: Fix BUG_ON for fs converted from extN.

--- a/series.conf
+++ b/series.conf
@@ -387,6 +387,7 @@
 	patches.fixes/btrfs-uninitialized-data-is-check_path_shared
 	patches.fixes/btrfs-fix-remap_file_pages-error
 	patches.fixes/btrfs-fix-null-dereference-in-relocation-c
+	patches.fixes/btrfs-fix-bug_on-for-fs-converted-from-extn
 
 	########################################################
 	# Reiserfs Patches
