--- a/series.conf
+++ b/series.conf
@@ -389,6 +389,7 @@
 	patches.fixes/btrfs-fix-null-dereference-in-relocation-c
 	patches.fixes/btrfs-fix-bug_on-for-fs-converted-from-extn
 	patches.fixes/btrfs-handle-error-returns-from-btrfs_lookup_dir_item
+	patches.fixes/btrfs-handle-kzalloc-failure-in-open_ctree
 
 	########################################################
 	# Reiserfs Patches
