- patches.fixes/btrfs-btrfs_read_fs_root_no_name-returns-err_ptrs:   Btrfs: btrfs_read_fs_root_no_name() returns ERR_PTRs.

--- a/series.conf
+++ b/series.conf
@@ -392,6 +392,7 @@
 	patches.fixes/btrfs-handle-kzalloc-failure-in-open_ctree
 	patches.fixes/btrfs-btrfs_iget-returns-err_ptr
 	patches.fixes/btrfs-unwind-after-btrfs_start_transaction-errors
+	patches.fixes/btrfs-btrfs_read_fs_root_no_name-returns-err_ptrs
 
 	########################################################
 	# Reiserfs Patches
