- patches.fixes/btrfs-unwind-after-btrfs_start_transaction-errors:   Btrfs: unwind after btrfs_start_transaction() errors.

--- a/series.conf
+++ b/series.conf
@@ -391,6 +391,7 @@
 	patches.fixes/btrfs-handle-error-returns-from-btrfs_lookup_dir_item
 	patches.fixes/btrfs-handle-kzalloc-failure-in-open_ctree
 	patches.fixes/btrfs-btrfs_iget-returns-err_ptr
+	patches.fixes/btrfs-unwind-after-btrfs_start_transaction-errors
 
 	########################################################
 	# Reiserfs Patches
