- patches.fixes/btrfs-btrfs_lookup_dir_item-can-return-err_ptr:   Btrfs: btrfs_lookup_dir_item() can return ERR_PTR.

--- a/series.conf
+++ b/series.conf
@@ -393,6 +393,7 @@
 	patches.fixes/btrfs-btrfs_iget-returns-err_ptr
 	patches.fixes/btrfs-unwind-after-btrfs_start_transaction-errors
 	patches.fixes/btrfs-btrfs_read_fs_root_no_name-returns-err_ptrs
+	patches.fixes/btrfs-btrfs_lookup_dir_item-can-return-err_ptr
 
 	########################################################
 	# Reiserfs Patches
