- patches.fixes/btrfs-should-add-a-permission-check-for-setfacl:   Btrfs: should add a permission check for setfacl.

--- a/series.conf
+++ b/series.conf
@@ -394,6 +394,7 @@
 	patches.fixes/btrfs-unwind-after-btrfs_start_transaction-errors
 	patches.fixes/btrfs-btrfs_read_fs_root_no_name-returns-err_ptrs
 	patches.fixes/btrfs-btrfs_lookup_dir_item-can-return-err_ptr
+	patches.fixes/btrfs-should-add-a-permission-check-for-setfacl
 
 	########################################################
 	# Reiserfs Patches
