- patches.fixes/btrfs-prohibit-a-operation-of-changing-acl-s-mask-when-noacl-mount-option-used:   Btrfs: prohibit a operation of changing acl's mask when noacl   mount option used.

--- a/series.conf
+++ b/series.conf
@@ -395,6 +395,7 @@
 	patches.fixes/btrfs-btrfs_read_fs_root_no_name-returns-err_ptrs
 	patches.fixes/btrfs-btrfs_lookup_dir_item-can-return-err_ptr
 	patches.fixes/btrfs-should-add-a-permission-check-for-setfacl
+	patches.fixes/btrfs-prohibit-a-operation-of-changing-acl-s-mask-when-noacl-mount-option-used
 
 	########################################################
 	# Reiserfs Patches
