- patches.fixes/btrfs-avoid-bug-when-dropping-root-and-reference-in-same-transaction:   Btrfs: avoid BUG when dropping root and reference in same   transaction.

--- a/series.conf
+++ b/series.conf
@@ -396,6 +396,7 @@
 	patches.fixes/btrfs-btrfs_lookup_dir_item-can-return-err_ptr
 	patches.fixes/btrfs-should-add-a-permission-check-for-setfacl
 	patches.fixes/btrfs-prohibit-a-operation-of-changing-acl-s-mask-when-noacl-mount-option-used
+	patches.fixes/btrfs-avoid-bug-when-dropping-root-and-reference-in-same-transaction
 
 	########################################################
 	# Reiserfs Patches
