- patches.fixes/btrfs-handle-err_ptr-from-posix_acl_from_xattr:   Btrfs: handle ERR_PTR from posix_acl_from_xattr().

--- a/series.conf
+++ b/series.conf
@@ -397,6 +397,7 @@
 	patches.fixes/btrfs-should-add-a-permission-check-for-setfacl
 	patches.fixes/btrfs-prohibit-a-operation-of-changing-acl-s-mask-when-noacl-mount-option-used
 	patches.fixes/btrfs-avoid-bug-when-dropping-root-and-reference-in-same-transaction
+	patches.fixes/btrfs-handle-err_ptr-from-posix_acl_from_xattr
 
 	########################################################
 	# Reiserfs Patches
