- patches.suse/fs-may_iops.diff: Replace. - patches.suse/0001-vfs-Hooks-for-more-fine-grained-directory-permission.patch:   vfs: Hooks for more fine-grained directory permission checking.   The may_delete hook in this version has an additional "replace"   argument which the previous version should have had, too.

--- a/series.conf
+++ b/series.conf
@@ -452,7 +452,7 @@
 	########################################################
 	# other filesystem stuff
 	########################################################
-	patches.suse/fs-may_iops.diff
+	patches.suse/0001-vfs-Hooks-for-more-fine-grained-directory-permission.patch
 
 	########################################################
 	# Swap-over-NFS
