--- a/series.conf
+++ b/series.conf
@@ -456,6 +456,7 @@
 	patches.suse/0002-vfs-Add-generic-IS_ACL-test-for-acl-support.patch
 	patches.suse/0003-vfs-Add-IS_RICHACL-test-for-richacl-support.patch
 	patches.suse/0004-richacl-In-memory-representation-and-helper-function.patch
+	patches.suse/0005-richacl-Permission-mapping-functions.patch
 
 	########################################################
 	# Swap-over-NFS
