- patches.suse/0002-vfs-Add-generic-IS_ACL-test-for-acl-support.patch:   vfs: Add generic IS_ACL() test for acl support.

--- a/series.conf
+++ b/series.conf
@@ -450,9 +450,10 @@
 	patches.fixes/novfs-LFS-initialization
 
 	########################################################
-	# other filesystem stuff
+	# other filesystem stuff: richacls
 	########################################################
 	patches.suse/0001-vfs-Hooks-for-more-fine-grained-directory-permission.patch
+	patches.suse/0002-vfs-Add-generic-IS_ACL-test-for-acl-support.patch
 
 	########################################################
 	# Swap-over-NFS
