- patches.suse/0003-vfs-Add-IS_RICHACL-test-for-richacl-support.patch:   vfs: Add IS_RICHACL() test for richacl support.

--- a/series.conf
+++ b/series.conf
@@ -454,6 +454,7 @@
 	########################################################
 	patches.suse/0001-vfs-Hooks-for-more-fine-grained-directory-permission.patch
 	patches.suse/0002-vfs-Add-generic-IS_ACL-test-for-acl-support.patch
+	patches.suse/0003-vfs-Add-IS_RICHACL-test-for-richacl-support.patch
 
 	########################################################
 	# Swap-over-NFS
