- patches.suse/0006-richacl-Compute-maximum-file-masks-from-an-acl.patch:   richacl: Compute maximum file masks from an acl.

--- a/series.conf
+++ b/series.conf
@@ -457,6 +457,7 @@
 	patches.suse/0003-vfs-Add-IS_RICHACL-test-for-richacl-support.patch
 	patches.suse/0004-richacl-In-memory-representation-and-helper-function.patch
 	patches.suse/0005-richacl-Permission-mapping-functions.patch
+	patches.suse/0006-richacl-Compute-maximum-file-masks-from-an-acl.patch
 
 	########################################################
 	# Swap-over-NFS
