- patches.suse/0011-richacl-Check-if-an-acl-is-equivalent-to-a-file-mode.patch:   richacl: Check if an acl is equivalent to a file mode.

--- a/series.conf
+++ b/series.conf
@@ -462,6 +462,7 @@
 	patches.suse/0008-richacl-Permission-check-algorithm.patch
 	patches.suse/0009-richacl-Helper-functions-for-implementing-richacl-in.patch
 	patches.suse/0010-richacl-Create-time-inheritance.patch
+	patches.suse/0011-richacl-Check-if-an-acl-is-equivalent-to-a-file-mode.patch
 
 	########################################################
 	# Swap-over-NFS
