- patches.suse/0009-richacl-Helper-functions-for-implementing-richacl-in.patch:   richacl: Helper functions for implementing richacl inode   operations.

--- a/series.conf
+++ b/series.conf
@@ -460,6 +460,7 @@
 	patches.suse/0006-richacl-Compute-maximum-file-masks-from-an-acl.patch
 	patches.suse/0007-richacl-Update-the-file-masks-in-chmod.patch
 	patches.suse/0008-richacl-Permission-check-algorithm.patch
+	patches.suse/0009-richacl-Helper-functions-for-implementing-richacl-in.patch
 
 	########################################################
 	# Swap-over-NFS
