--- a/series.conf
+++ b/series.conf
@@ -461,6 +461,7 @@
 	patches.suse/0007-richacl-Update-the-file-masks-in-chmod.patch
 	patches.suse/0008-richacl-Permission-check-algorithm.patch
 	patches.suse/0009-richacl-Helper-functions-for-implementing-richacl-in.patch
+	patches.suse/0010-richacl-Create-time-inheritance.patch
 
 	########################################################
 	# Swap-over-NFS
