- patches.suse/0007-richacl-Update-the-file-masks-in-chmod.patch:   richacl: Update the file masks in chmod().

--- a/series.conf
+++ b/series.conf
@@ -458,6 +458,7 @@
 	patches.suse/0004-richacl-In-memory-representation-and-helper-function.patch
 	patches.suse/0005-richacl-Permission-mapping-functions.patch
 	patches.suse/0006-richacl-Compute-maximum-file-masks-from-an-acl.patch
+	patches.suse/0007-richacl-Update-the-file-masks-in-chmod.patch
 
 	########################################################
 	# Swap-over-NFS
