- patches.suse/0008-richacl-Permission-check-algorithm.patch:   richacl: Permission check algorithm.

--- a/series.conf
+++ b/series.conf
@@ -459,6 +459,7 @@
 	patches.suse/0005-richacl-Permission-mapping-functions.patch
 	patches.suse/0006-richacl-Compute-maximum-file-masks-from-an-acl.patch
 	patches.suse/0007-richacl-Update-the-file-masks-in-chmod.patch
+	patches.suse/0008-richacl-Permission-check-algorithm.patch
 
 	########################################################
 	# Swap-over-NFS
