--- a/series.conf
+++ b/series.conf
@@ -463,6 +463,7 @@
 	patches.suse/0009-richacl-Helper-functions-for-implementing-richacl-in.patch
 	patches.suse/0010-richacl-Create-time-inheritance.patch
 	patches.suse/0011-richacl-Check-if-an-acl-is-equivalent-to-a-file-mode.patch
+	patches.suse/0012-richacl-Automatic-Inheritance.patch
 
 	########################################################
 	# Swap-over-NFS
