- patches.suse/0014-richacl-xattr-mapping-functions.patch:   richacl: xattr mapping functions.

--- a/series.conf
+++ b/series.conf
@@ -465,6 +465,7 @@
 	patches.suse/0011-richacl-Check-if-an-acl-is-equivalent-to-a-file-mode.patch
 	patches.suse/0012-richacl-Automatic-Inheritance.patch
 	patches.suse/0013-richacl-Restrict-access-check-algorithm.patch
+	patches.suse/0014-richacl-xattr-mapping-functions.patch
 
 	########################################################
 	# Swap-over-NFS
