- patches.suse/0015-ext4-Use-IS_POSIXACL-to-check-for-POSIX-ACL-support.patch:   ext4: Use IS_POSIXACL() to check for POSIX ACL support.

--- a/series.conf
+++ b/series.conf
@@ -466,6 +466,7 @@
 	patches.suse/0012-richacl-Automatic-Inheritance.patch
 	patches.suse/0013-richacl-Restrict-access-check-algorithm.patch
 	patches.suse/0014-richacl-xattr-mapping-functions.patch
+	patches.suse/0015-ext4-Use-IS_POSIXACL-to-check-for-POSIX-ACL-support.patch
 
 	########################################################
 	# Swap-over-NFS
