- patches.suse/0016-ext4-Implement-richacl-support-in-ext4.patch:   ext4: Implement richacl support in ext4. - Update config files: CONFIG_EXT4_FS_RICHACL=y - patches.xen/tmem: Remove fuzz.

--- a/series.conf
+++ b/series.conf
@@ -467,6 +467,7 @@
 	patches.suse/0013-richacl-Restrict-access-check-algorithm.patch
 	patches.suse/0014-richacl-xattr-mapping-functions.patch
 	patches.suse/0015-ext4-Use-IS_POSIXACL-to-check-for-POSIX-ACL-support.patch
+	patches.suse/0016-ext4-Implement-richacl-support-in-ext4.patch
 
 	########################################################
 	# Swap-over-NFS
