- patches.fixes/nfs_wb_page_deadlock.fix: NFS: Fix another   nfs_wb_page() deadlock (bnc#612794).

--- a/series.conf
+++ b/series.conf
@@ -331,6 +331,7 @@
 	patches.fixes/nfsd-06-sunrpc-cache-retry-cache-lookups-that-return-ETIMEDO.patch
 	patches.fixes/nfsd-07-nfsd-idmap-drop-special-request-deferal-in-favour-of.patch
 	patches.fixes/sunrpc-monotonic-expiry
+	patches.fixes/nfs_wb_page_deadlock.fix
 
 	########################################################
 	# lockd + statd
