- patches.drivers/ixgbe-disable-tx-engine-before-disabling-tx-laser.patch:   ixgbe: disable tx engine before disabling tx laser. - patches.drivers/ixgbe-fix-panic-when-shutting-down-system-with-WoL-e.patch:   ixgbe: fix panic when shutting down system with WoL enabled. - patches.drivers/ixgbe-skip-non-IPv4-packets-in-ATR-filter.patch:   ixgbe: skip non IPv4 packets in ATR filter. - patches.fixes/e1000e-don-t-inadvertently-re-set-INTX_DISABLE.patch:   e1000e: don't inadvertently re-set INTX_DISABLE.

--- a/series.conf
+++ b/series.conf
@@ -585,6 +585,12 @@
 
 	patches.drivers/tg3-5785-and-57780-asic-revs-not-working.patch
 
+	patches.fixes/e1000e-don-t-inadvertently-re-set-INTX_DISABLE.patch
+	patches.drivers/ixgbe-disable-tx-engine-before-disabling-tx-laser.patch
+	patches.drivers/ixgbe-fix-panic-when-shutting-down-system-with-WoL-e.patch
+	patches.drivers/ixgbe-skip-non-IPv4-packets-in-ATR-filter.patch
+
+
 	########################################################
 	# Wireless Networking
 	########################################################
