- patches.suse/dm-raid45-api-update-remove-dm_put-after-dm_table_get_md:   dm-raid45: API update: Remove dm_put after dm_table_get_md   (bnc#615656).

--- a/series.conf
+++ b/series.conf
@@ -660,6 +660,7 @@
 	patches.suse/dm-raid45-26-Nov-2009.patch
 	patches.suse/dmraid45-dm_dirty_log_create-api-fix
 	patches.suse/dmraid45-dm_get_device-takes-fewer-arguments
+	patches.suse/dm-raid45-api-update-remove-dm_put-after-dm_table_get_md
 	patches.fixes/dm-mpath-reattach-dh
 	patches.suse/dm-mpath-leastpending-path-update
 	patches.suse/dm-mpath-accept-failed-paths
