--- a/series.conf
+++ b/series.conf
@@ -157,6 +157,7 @@
 	patches.arch/x86_mce_intel_decode_physical_address.patch
 	patches.arch/x86_mce_intel_decode_physical_address_rename_fix.patch
 	patches.arch/x86_mce_intel_decode_physical_address_compile_fix.patch
+	patches.arch/x86_mce_intel_decode_physical_fix_dynamic_debug.patch
 
 	########################################################
 	# x86_64/4096CPUS - from SGI
