--- a/series.conf
+++ b/series.conf
@@ -596,6 +596,7 @@
 	########################################################
 	patches.suse/wireless-no-aes-select
 	patches.suse/b43-missing-firmware-info.patch
+	patches.fixes/iwlwifi-fix-tx-power-configuration-on-3945-and-4965-devices
 
 	########################################################
 	# iSCSI
