- patches.rpmify/kbuild-setlocalversion-fix: kbuild: Fix path   to scripts/setlocalversion.

--- a/series.conf
+++ b/series.conf
@@ -42,6 +42,7 @@
 
 	patches.rpmify/ppc-crashdump-typefix
 	patches.rpmify/powerpc-kvm-build-failure-workaround
+	patches.rpmify/kbuild-setlocalversion-fix
 
         ########################################################
         # kABI consistency patches
