- Update Xen patches to 2.6.35-rc4.

--- a/series.conf
+++ b/series.conf
@@ -843,6 +843,7 @@
 	patches.xen/xen3-patch-2.6.33
 	patches.xen/xen3-patch-2.6.34
 	patches.xen/xen3-patch-2.6.35-rc3
+	patches.xen/xen3-patch-2.6.35-rc3-rc4
 	patches.xen/xen3-seccomp-disable-tsc-option
 	patches.xen/xen3-x86-mcp51-no-dac
 	patches.xen/xen3-x86-mark_rodata_rw.patch
