- patches.fixes/novfs-overflow-fixes: novfs: security: Add buffer   overflow, integer wraparound fixes (bnc#594362).

--- a/series.conf
+++ b/series.conf
@@ -395,6 +395,7 @@
 	patches.fixes/novfs-dentry-cache-limit.patch
 	patches.fixes/novfs-return-ENOTEMPTY-when-deleting-nonempty-dir
 	patches.fixes/novfs-LFS-initialization
+	patches.fixes/novfs-overflow-fixes
 
 	########################################################
 	# other filesystem stuff: richacls
