- Update to 2.6.35-rc5.   - Eliminated 5 patches.

--- a/series.conf
+++ b/series.conf
@@ -31,6 +31,7 @@
 	patches.kernel.org/patch-2.6.35-rc1-rc2
 	patches.kernel.org/patch-2.6.35-rc2-rc3
 	patches.kernel.org/patch-2.6.35-rc3-rc4
+	patches.kernel.org/patch-2.6.35-rc4-rc5
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
@@ -42,7 +43,6 @@
 
 	patches.rpmify/ppc-crashdump-typefix
 	patches.rpmify/powerpc-kvm-build-failure-workaround
-	patches.rpmify/kbuild-setlocalversion-fix
 
         ########################################################
         # kABI consistency patches
@@ -182,7 +182,7 @@
 	patches.suse/radeon-monitor-jsxx-quirk.patch
 
 	patches.suse/8250-sysrq-ctrl_o.patch
-	patches.suse/ppc-no-LDFLAGS_MODULE.patch
++needs_update?	patches.suse/ppc-no-LDFLAGS_MODULE.patch
 	patches.arch/ppc-pegasos-console-autodetection.patch
 	patches.suse/ppc-powerbook-usb-fn-key-default.patch
 	patches.drivers/ppc64-adb
@@ -530,9 +530,6 @@
 	patches.drivers/tg3-5785-and-57780-asic-revs-not-working.patch
 
 	patches.fixes/e1000e-don-t-inadvertently-re-set-INTX_DISABLE.patch
-	patches.drivers/ixgbe-disable-tx-engine-before-disabling-tx-laser.patch
-	patches.drivers/ixgbe-fix-panic-when-shutting-down-system-with-WoL-e.patch
-	patches.drivers/ixgbe-skip-non-IPv4-packets-in-ATR-filter.patch
 
 
 	########################################################
@@ -585,7 +582,6 @@
 	########################################################
 	patches.fixes/ieee1394-sbp2_long_sysfs_ieee1394_id.patch
 	patches.fixes/parport-mutex
-	patches.drivers/hwmon-it87-fix-in7-on-IT8720F.patch
 
 	# suse-2.4 compatible crypto loop driver
 	patches.suse/twofish-2.6
