- patches.arch/acpi_fix_fadt_32_bit_zero_length.patch: Only use   32 bit addresses if they have a valid length (bug#581644).

--- a/series.conf
+++ b/series.conf
@@ -263,6 +263,8 @@
 	patches.arch/acpi_thermal_passive_blacklist.patch
 	patches.arch/acpi-export-hotplug_execute
 
+	patches.arch/acpi_fix_fadt_32_bit_zero_length.patch
+
 +needs_update-32	patches.arch/acpi_ec_provide_non_interrupt_mode_boot_param.patch
 
 	# Adjust this patch for every new product (at least Enterprise
