- novfs: Fix a memory leak that causes an OOM condition   (bnc#610828).

--- a/series.conf
+++ b/series.conf
@@ -399,6 +399,7 @@
 	patches.fixes/novfs-LFS-initialization
 	patches.fixes/novfs-overflow-fixes
 	patches.fixes/novfs-bdi-init.diff
+	patches.fixes/novfs-xattr-memleak
 
 	########################################################
 	# other filesystem stuff: richacls
