- novfs: code cleanup for one case of novfs return value   (bnc#624606).

--- a/series.conf
+++ b/series.conf
@@ -400,6 +400,7 @@
 	patches.fixes/novfs-overflow-fixes
 	patches.fixes/novfs-bdi-init.diff
 	patches.fixes/novfs-xattr-memleak
+	patches.fixes/novfs-xattr-errcode-cleanup
 
 	########################################################
 	# other filesystem stuff: richacls
