--- a/series.conf
+++ b/series.conf
@@ -32,6 +32,7 @@
 	patches.kernel.org/patch-2.6.35-rc2-rc3
 	patches.kernel.org/patch-2.6.35-rc3-rc4
 	patches.kernel.org/patch-2.6.35-rc4-rc5
+	patches.kernel.org/patch-2.6.35-rc5-rc6
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
