--- a/rpm/kernel-source.spec.in
+++ b/rpm/kernel-source.spec.in
@@ -89,6 +89,7 @@ Source63:       arch-symbols
 Source64:       package-descriptions
 Source65:       kernel-spec-macros
 Source66:       configtool.pl
+Source67:       log.sh
 Source100:      config.tar.bz2
 Source101:      config.addon.tar.bz2
 Source102:      patches.arch.tar.bz2
