- Update Xen patches to 2.6.35 final and c/s 1025. - create devices in /dev/xen when they are expected to be   used there. - xen/netback: Allow setting of large MTU before rings have   connected. - xen/netback: Always pull through PKT_PROT_LEN bytes into the   linear part of an skb. - pass trigger mode and polarity information to Xen for all   interrupts. - Update Xen config files. - supported.conf: Add pci-iomul.ko.

--- a/supported.conf
+++ b/supported.conf
@@ -1588,6 +1588,7 @@
 		kernel/drivers/pci/hotplug/pci_hotplug			# PCI Hot Plug PCI Core
 		kernel/drivers/pci/hotplug/sgi_hotplug			# SGI's PCI Hotplug controller Driver
 		kernel/drivers/pci/hotplug/shpchp			# Standard Hot Plug PCI Controller Driver
+		kernel/drivers/pci/pci-iomul				# PCI I/O port multiplexer interface
 		kernel/drivers/pci/pcie/aer/aer_inject # fate #306815
 		kernel/drivers/pcmcia/i82092
 +isa		kernel/drivers/pcmcia/i82365
