- ALSA: hda - patch_nvhdmi.c: Add missing codec IDs, unify names   (bnc#627212).

--- a/series.conf
+++ b/series.conf
@@ -579,6 +579,7 @@
 	# Sound
 	##########################################################
 	patches.drivers/alsa-hda-01-Add-pin-fix-for-HP-dc5750
+	patches.drivers/alsa-hda-02-nvhdmi-add-missing-codec-ids
 
 	########################################################
 	# Other driver fixes
