- ALSA: hda - Add pin-fix for HP dc5750 (bnc#624118).

--- a/series.conf
+++ b/series.conf
@@ -578,6 +578,7 @@
 	##########################################################
 	# Sound
 	##########################################################
+	patches.drivers/alsa-hda-01-Add-pin-fix-for-HP-dc5750
 
 	########################################################
 	# Other driver fixes
