- NFS: allow close-to-open cache semantics to apply to root of   NFS filesystem (bnc#584720).

--- a/series.conf
+++ b/series.conf
@@ -322,6 +322,7 @@
 	patches.fixes/nfsd-06-sunrpc-cache-retry-cache-lookups-that-return-ETIMEDO.patch
 	patches.fixes/nfsd-07-nfsd-idmap-drop-special-request-deferal-in-favour-of.patch
 +needs_update-35	patches.fixes/sunrpc-monotonic-expiry
+	patches.fixes/nfs-readdir-cache-fix
 
 	########################################################
 	# lockd + statd
