- Refresh   patches.fixes/nfsd-05-sunrpc-cache-allow-thread-to-block-while-waiting-for.patch. - Refresh patches.fixes/sunrpc-monotonic-expiry. - Delete patches.fixes/nfs-write.c-bug-removal.patch.
Update some patches for 2.6.35

--- a/series.conf
+++ b/series.conf
@@ -318,10 +318,10 @@
 	########################################################
 	patches.fixes/nfs-slot-table-alloc
 
-+needs_update-35	patches.fixes/nfsd-05-sunrpc-cache-allow-thread-to-block-while-waiting-for.patch
+	patches.fixes/nfsd-05-sunrpc-cache-allow-thread-to-block-while-waiting-for.patch
 	patches.fixes/nfsd-06-sunrpc-cache-retry-cache-lookups-that-return-ETIMEDO.patch
 	patches.fixes/nfsd-07-nfsd-idmap-drop-special-request-deferal-in-favour-of.patch
-+needs_update-35	patches.fixes/sunrpc-monotonic-expiry
+	patches.fixes/sunrpc-monotonic-expiry
 	patches.fixes/nfs-readdir-cache-fix
 
 	########################################################
@@ -735,7 +735,6 @@
 
 	patches.trace/x86_cpufreq_make_trace_power_frequency_cpufreq_driver_independent.patch
 
-+needs_update-32	patches.fixes/nfs-write.c-bug-removal.patch
 	patches.fixes/ia64-configure-HAVE_UNSTABLE_SCHED_CLOCK-for-SGI_SN.patch
 
 	########################################################
