- patches.fixes/vmscan-fix-stalls.patch: vmscan: raise the bar   to PAGEOUT_IO_SYNC stalls (bnc#625339).

--- a/series.conf
+++ b/series.conf
@@ -103,6 +103,7 @@
 
 	patches.fixes/make-note_interrupt-fast.diff
 	patches.fixes/twl6030-fix-note_interrupt-call
+	patches.fixes/vmscan-fix-stalls.patch
 
         ########################################################
         # Architecture-specific patches. These used to be all
