- ALSA: hda - Add quirk for Dell Vostro 1220 (bnc#631066).

--- a/series.conf
+++ b/series.conf
@@ -582,6 +582,7 @@
 	##########################################################
 	patches.drivers/alsa-hda-01-Add-pin-fix-for-HP-dc5750
 	patches.drivers/alsa-hda-02-nvhdmi-add-missing-codec-ids
+	patches.drivers/alsa-hda-03-Add-quirk-for-Dell-Vostro-1220
 
 	########################################################
 	# Other driver fixes
