- Updated to 2.6.36-rc2.   - Eliminated 2 patches.

--- a/series.conf
+++ b/series.conf
@@ -28,6 +28,7 @@
 	# Send separate patches upstream if you find a problem...
 	########################################################
 	patches.kernel.org/patch-2.6.36-rc1
+	patches.kernel.org/patch-2.6.36-rc1-rc2
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
@@ -309,7 +310,6 @@
 	patches.fixes/nfsd-06-sunrpc-cache-retry-cache-lookups-that-return-ETIMEDO.patch
 	patches.fixes/nfsd-07-nfsd-idmap-drop-special-request-deferal-in-favour-of.patch
 	patches.fixes/sunrpc-monotonic-expiry
-	patches.fixes/nfs-readdir-cache-fix
 
 	########################################################
 	# lockd + statd
@@ -553,7 +553,6 @@
 	##########################################################
 	# Sound
 	##########################################################
-	patches.drivers/alsa-hda-03-Add-quirk-for-Dell-Vostro-1220
 
 	########################################################
 	# Other driver fixes
