- rpm/kernel-binary.spec.in: Disable CONFIG_DEBUG_INFO. It's enabled   dynamically in the spec file and now has follow-on options.

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -232,6 +232,7 @@ fi
 	--enable  CONFIG_SUSE_KERNEL \
 %if 0%{?__debug_package:1}
 	--enable  CONFIG_DEBUG_INFO
+	--disable  CONFIG_DEBUG_INFO_REDUCED
 %else
 	--disable CONFIG_DEBUG_INFO
 %endif
