- rpm/kernel-binary.spec.in: Fixed typo with last fix.

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -231,7 +231,7 @@ fi
 	--set-str CONFIG_LOCALVERSION -%release_major-%build_flavor \
 	--enable  CONFIG_SUSE_KERNEL \
 %if 0%{?__debug_package:1}
-	--enable  CONFIG_DEBUG_INFO
+	--enable  CONFIG_DEBUG_INFO \
 	--disable  CONFIG_DEBUG_INFO_REDUCED
 %else
 	--disable CONFIG_DEBUG_INFO
