- rpm/kernel-source.spec.in, scripts/tar-up.sh: Renamed config-options.changes   to config-options.changes.txt in the exported package to avoid triggering   a build service rule error.

--- a/rpm/kernel-source.spec.in
+++ b/rpm/kernel-source.spec.in
@@ -65,7 +65,7 @@ Source34:       check-supported-list
 Source35:	group-source-files.pl
 Source37:       README.SUSE
 Source38:       README.KSYMS
-Source39:       config-options.changes
+Source39:       config-options.changes.txt
 Source40:       source-timestamp
 Source41:       built-in-where
 Source42:       symsets.pl
@@ -201,7 +201,7 @@ fi
 # Install the documentation and example Kernel Module Package.
 DOC=$RPM_BUILD_ROOT/usr/share/doc/packages/%name
 mkdir -p $DOC
-cp %_sourcedir/README.SUSE %_sourcedir/config-options.changes $DOC
+cp %_sourcedir/README.SUSE %_sourcedir/config-options.changes.txt $DOC
 ln -s /usr/share/doc/packages/%name/README.SUSE %buildroot/%src_install_dir/
 
 install -m 755 -d $RPM_BUILD_ROOT/etc/rpm
