- makefile: not need to regenerate kernel.release file when   make kernelrelease.

--- a/series.conf
+++ b/series.conf
@@ -69,6 +69,7 @@
 +36	patches.fixes/kbuild-fix-generating-of-.symtypes-files
 	patches.suse/genksyms-add-override-flag.diff
 	patches.suse/kconfig-automate-kernel-desktop
+	patches.fixes/make-kernelrelease-fix
 
         ########################################################
         # Simple export additions/removals
