--- a/series.conf
+++ b/series.conf
@@ -40,6 +40,7 @@
 	patches.rpmify/spectra-drop-locked_ioctl-support
 	patches.rpmify/spectra-drop-prepare_flush_fn-support
 	patches.rpmify/spectra-remove-duplicate-glob_version
+	patches.rpmify/spectra-depends-on-moorestown
 	patches.rpmify/caif-unaligned-include-fix
 
         ########################################################
