- s390: Fix prototype for execve.

--- a/series.conf
+++ b/series.conf
@@ -42,6 +42,7 @@
 	patches.rpmify/spectra-remove-duplicate-glob_version
 	patches.rpmify/spectra-depends-on-moorestown
 	patches.rpmify/caif-unaligned-include-fix
+	patches.rpmify/s390-execve-prototype-fix
 
         ########################################################
         # kABI consistency patches
