--- a/series.conf
+++ b/series.conf
@@ -248,10 +248,10 @@
 	patches.arch/acpi_thinkpad_introduce_acpi_root_table_boot_param.patch
 
 +trenn	patches.suse/acpi-dsdt-initrd-v0.9a-2.6.25.patch
-	patches.suse/add-initramfs-file_read_write
-	patches.suse/init-move-populate_rootfs-back-to-start_kernel
-	patches.suse/acpi-generic-initramfs-table-override-support
-	patches.suse/acpi-don-t-preempt-until-the-system-is-up
++jeffm	patches.suse/add-initramfs-file_read_write
++jeffm	patches.suse/init-move-populate_rootfs-back-to-start_kernel
++jeffm	patches.suse/acpi-generic-initramfs-table-override-support
++jeffm	patches.suse/acpi-don-t-preempt-until-the-system-is-up
 
 	patches.arch/acpi_thermal_passive_blacklist.patch
 	patches.arch/acpi-export-hotplug_execute
