- fix jiffies overflow problems in bonding (bnc#613273).

--- a/series.conf
+++ b/series.conf
@@ -292,6 +292,7 @@
         # Networking, IPv6
         ########################################################
 	patches.fixes/bridge-module-get-put.patch
+	patches.fixes/bonding-jiffies2.patch
 
 	########################################################
 	# NFS
