- fix unwind annotations.

--- a/series.conf
+++ b/series.conf
@@ -632,6 +632,7 @@
 	patches.suse/crasher-26.diff
 	patches.suse/stack-unwind
 	patches.suse/no-frame-pointer-select
+	patches.arch/i386-unwind-annotations
 	patches.arch/x86_64-unwind-annotations
 
         ########################################################
