patches.drivers/matador_reset_quirk.diff: Fix reset with Matador btusb devices bnc#626171

--- a/series.conf
+++ b/series.conf
@@ -569,6 +569,8 @@
 	# Suspend/Resume stuff
 	########################################################
 
+	patches.drivers/matador_reset_quirk.diff
+
 	########################################################
 	# device-mapper
 	########################################################
