--- a/series.conf
+++ b/series.conf
@@ -30,6 +30,7 @@
 	patches.kernel.org/patch-2.6.36-rc1
 	patches.kernel.org/patch-2.6.36-rc1-rc2
 	patches.kernel.org/patch-2.6.36-rc2-rc3
+	patches.kernel.org/patch-2.6.36-rc3-rc4
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
@@ -38,7 +39,6 @@
         ########################################################
 	patches.rpmify/tioca-fix-assignment-from-incompatible-pointer-warnings
 	patches.rpmify/ia64-mca-fix-cast-from-integer-to-pointer-warning
-	patches.rpmify/spectra-depends-on-moorestown
 
         ########################################################
         # kABI consistency patches
@@ -187,6 +187,7 @@
 
 	patches.suse/s390-System.map.diff
 	patches.arch/s390-message-catalog.diff
+	patches.arch/s390-message-catalog-fix.diff
 	patches.arch/kmsg-fix-parameter-limitations
 
 	patches.suse/s390-Kerntypes.diff
@@ -292,8 +293,6 @@
         # Networking, IPv6
         ########################################################
 	patches.fixes/bridge-module-get-put.patch
-	patches.fixes/net-sched-fix-kernel-leak-in-act_police
-	patches.fixes/bonding-jiffies2.patch
 
 	########################################################
 	# NFS
@@ -502,7 +501,6 @@
         patches.drivers/tg3-entropy-source.patch
 
 	patches.drivers/tg3-5785-and-57780-asic-revs-not-working.patch
-	patches.fixes/irda-correctly-clean-up-self-ias_obj-on-irda_bind-failure
 
 
 	########################################################
@@ -769,6 +767,7 @@
 	patches.xen/xen3-patch-2.6.34
 	patches.xen/xen3-patch-2.6.35
 	patches.xen/xen3-patch-2.6.36-rc3
+	patches.xen/xen3-patch-2.6.36-rc4
 	patches.xen/xen3-seccomp-disable-tsc-option
 	patches.xen/xen3-x86-mcp51-no-dac
 	patches.xen/xen3-x86-mark_rodata_rw.patch
