- Delete patches.suse/cgroup-disable-memory.patch: It is no longer needed. The performance hit that it caused has been eliminated.

--- a/series.conf
+++ b/series.conf
@@ -515,6 +515,7 @@
 	patches.suse/wireless-no-aes-select
 	patches.suse/b43-missing-firmware-info.patch
 	patches.fixes/iwlwifi-fix-tx-power-configuration-on-3945-and-4965-devices
+	patches.fixes/wext-fix-potential-private-ioctl-memory-content-leak
 
 	########################################################
 	# iSCSI
@@ -648,7 +649,6 @@
         ########################################################
 	# cgroups
         ########################################################
-	patches.suse/cgroup-disable-memory.patch
 
         ########################################################
 	# audit subsystem
