- Linux: 2.6.36-rc5.   - Eliminated 6 patches (all security backports).

--- a/series.conf
+++ b/series.conf
@@ -31,6 +31,7 @@
 	patches.kernel.org/patch-2.6.36-rc1-rc2
 	patches.kernel.org/patch-2.6.36-rc2-rc3
 	patches.kernel.org/patch-2.6.36-rc3-rc4
+	patches.kernel.org/patch-2.6.36-rc4-rc5
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
@@ -91,7 +92,6 @@
 
 	patches.fixes/make-note_interrupt-fast.diff
 	patches.fixes/twl6030-fix-note_interrupt-call
-	patches.fixes/compat-make-compat_alloc_user_space-incorporate-the-access_ok
 
         ########################################################
         # Architecture-specific patches. These used to be all
@@ -135,8 +135,6 @@
 	patches.arch/kvm-replace-kvm-io-delay-pv-ops-with-linux-magic
 
 	patches.suse/x86-mark_rodata_rw.patch
-	patches.fixes/x86-64-compat-retruncate-rax-after-ia32-syscall-entry-tracing
-	patches.fixes/x86-64-compat-test-rax-for-the-syscall-number-not-eax
 
 	########################################################
 	# x86 MCE/MCA (Machine Check Error/Architecture) extensions
@@ -504,9 +502,6 @@
         patches.drivers/tg3-entropy-source.patch
 
 	patches.drivers/tg3-5785-and-57780-asic-revs-not-working.patch
-	patches.fixes/drivers-net-eql-c-prevent-reading-uninitialized-stack-memory
-	patches.fixes/drivers-net-cxgb3-cxgb3_main-c-prevent-reading-uninitialized-stack-memory
-	patches.fixes/drivers-net-usb-hso-c-prevent-reading-uninitialized-memory
 
 
 	########################################################
