- rpm/kernel-docs.spec.in: BuildRequire proper version of kernel-source

--- a/rpm/kernel-docs.spec.in
+++ b/rpm/kernel-docs.spec.in
@@ -23,20 +23,20 @@
 %include %_sourcedir/kernel-spec-macros
 
 Name:           kernel-docs@VARIANT@
-BuildRequires:  docbook-toys docbook-utils ghostscript_any libjpeg-devel texlive transfig xmlto xorg-x11-devel
-BuildRequires:  kernel-source%variant = @RPMVERSION@
-Url:            http://www.kernel.org/
-License:        GPL v2 or later
-Group:          Documentation/Man
-AutoReqProv:    on
+Summary:        Kernel Documentation
 Version:        @RPMVERSION@
 %if %using_buildservice
 Release:        @RELEASE_PREFIX@<RELEASE>
 %else
 Release:        @RELEASE_PREFIX@0
 %endif
+BuildRequires:  docbook-toys docbook-utils ghostscript_any libjpeg-devel texlive transfig xmlto xorg-x11-devel
+BuildRequires:  kernel-source%variant = %version-%source_rel
+Url:            http://www.kernel.org/
+License:        GPL v2 or later
+Group:          Documentation/Man
+AutoReqProv:    on
 Provides:       %name = %version-%source_rel
-Summary:        Kernel Documentation
 BuildArch:      noarch
 BuildRoot:      %{_tmppath}/%{name}-%{version}-build
 Source:		kernel-spec-macros
