--- a/series.conf
+++ b/series.conf
@@ -40,6 +40,7 @@
         ########################################################
 	patches.rpmify/tioca-fix-assignment-from-incompatible-pointer-warnings
 	patches.rpmify/ia64-mca-fix-cast-from-integer-to-pointer-warning
+	patches.rpmify/qla4xx-missing-readq-definition
 
         ########################################################
         # kABI consistency patches
