- Update Xen patches to 2.6.36-rc5 and c/s 1038.

--- a/series.conf
+++ b/series.conf
@@ -768,7 +768,8 @@
 	patches.xen/xen3-patch-2.6.34
 	patches.xen/xen3-patch-2.6.35
 	patches.xen/xen3-patch-2.6.36-rc3
-	patches.xen/xen3-patch-2.6.36-rc4
+	patches.xen/xen3-patch-2.6.36-rc3-rc4
+	patches.xen/xen3-patch-2.6.36-rc4-rc5
 	patches.xen/xen3-seccomp-disable-tsc-option
 	patches.xen/xen3-x86-mcp51-no-dac
 	patches.xen/xen3-x86-mark_rodata_rw.patch
@@ -779,7 +780,6 @@
 	patches.xen/xen3-x86_64-unwind-annotations
 
 	# bugfixes and enhancements
-	patches.xen/xen-device-names
 	patches.xen/xen-balloon-max-target
 	patches.xen/xen-modular-blktap
 	patches.xen/xen-blkback-bimodal-suse
