- Dynamic Debug: Initialize dynamic debug earlier via   arch_initcall (none).

--- a/series.conf
+++ b/series.conf
@@ -449,6 +449,7 @@
 
 	patches.drivers/dynamic_debug_1.patch
 	patches.drivers/dynamic_debug_2.patch
+	patches.drivers/dynamic_debug_3.patch
 
 	########################################################
 	# Storage
