--- a/series.conf
+++ b/series.conf
@@ -448,6 +448,7 @@
 	patches.drivers/disable-catas_reset-by-default-to-avoid-problems-with-eeh.patch
 
 	patches.drivers/dynamic_debug_1.patch
+	patches.drivers/dynamic_debug_2.patch
 
 	########################################################
 	# Storage
