- Dynamic Debug: Split out query string parsing/setup from   proc_write (none).

--- a/series.conf
+++ b/series.conf
@@ -447,6 +447,8 @@
 
 	patches.drivers/disable-catas_reset-by-default-to-avoid-problems-with-eeh.patch
 
+	patches.drivers/dynamic_debug_1.patch
+
 	########################################################
 	# Storage
 	########################################################
