- PNP: Use dev_dbg instead of dev_printk(KERN_DEBUG.. if   DYNAMIC_DEBUG is compiled in (none).

--- a/series.conf
+++ b/series.conf
@@ -452,6 +452,7 @@
 	patches.drivers/dynamic_debug_3.patch
 	patches.drivers/dynamic_debug_4.patch
 	patches.drivers/dynamic_debug_5.patch
+	patches.drivers/dynamic_debug_6.patch
 
 	########################################################
 	# Storage
