- PNP: Compile all pnp built-in stuff in one module namespace   (none).

--- a/series.conf
+++ b/series.conf
@@ -451,6 +451,7 @@
 	patches.drivers/dynamic_debug_2.patch
 	patches.drivers/dynamic_debug_3.patch
 	patches.drivers/dynamic_debug_4.patch
+	patches.drivers/dynamic_debug_5.patch
 
 	########################################################
 	# Storage
