--- a/series.conf
+++ b/series.conf
@@ -453,6 +453,7 @@
 	patches.drivers/dynamic_debug_4.patch
 	patches.drivers/dynamic_debug_5.patch
 	patches.drivers/dynamic_debug_6.patch
+	patches.drivers/dynamic_debug_7.patch
 
 	########################################################
 	# Storage
